# stdlib

./: .gitignore  README.md  buildpkg.sh  install.sh  pyproject.toml  stdlib-0.0.1-py3-none-any.whl  stdlib.py  stdlib_littleblack111-0.0.1-py3-none-any.whl  test.py
stdlib.egg-info/: PKG-INFO  SOURCES.txt
stdlib_littleblack111.egg-info/: PKG-INFO  SOURCES.txt
